# comfyui_tag_fillter

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  tag_category.json  tag_category_v2.json
utils/: categolize_tags.py  categolize_tags2.py  categolize_tags3.py  samples.csv  wd-eva02-large-tagger-v3.csv  wd-v1-4-moat-tagger-v2.csv
