[project]
name = "comfyui_tag_fillter"
description = "This is a custom node of ComfyUI that categorizes tags outputted by tools like WD14Tagger, filters them by each category, and returns the filtered results."
version = "1.0.2"
license = "LICENSE"
dependencies = []

[project.urls]
Repository = "https://github.com/sugarkwork/comfyui_tag_fillter"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "sugarknight"
DisplayName = "comfyui_tag_fillter"
Icon = ""
